# cpp-homework-semester1

./: CMakeLists.txt  README.md
2024-09-12/: check_if_number_is_a_palindrome.cpp  find_all_divisors.cpp  find_the_first_n_prime_numbers.cpp
2024-09-18 S03/: task1.cpp  task3.cpp  task5.cpp
Seminar 3/: CMakeLists.txt  task2.cpp  task4.cpp  task6.cpp  task7.cpp  task8.cpp
lab01/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp
lab02/: CMakeLists.txt  task1.cpp  task3.cpp  task4.cpp  task5.cpp
lab03/: CMakeLists.txt  task1.1.cpp  task1.2.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
lab04/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp
lab2/: CMakeLists.txt  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp
seminar01/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
seminar02/: CMakeLists.txt  task1.1.cpp  task1.4.cpp  task2.1.cpp  task2.13.cpp  task2.6.cpp  task3.13.1.cpp  task3.13.2.cpp  task3.13.3.cpp
seminar03/: CMakeLists.txt  task1.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp
seminar04/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  (+2 more)
seminar3/: CMakeLists.txt  task2.cpp  task3.cpp  task7.cpp
seminar3/task1/: CMakeLists.txt
seminar3/task2/: CMakeLists.txt
seminar3/task3/: CMakeLists.txt  main.cpp
seminar3/task4/: CMakeLists.txt
seminar3/task5/: CMakeLists.txt
seminar3/task6/: CMakeLists.txt  main.cpp
seminar3/task7/: CMakeLists.txt
seminar3/task8/: CMakeLists.txt  main.cpp
(+18 files in other folders)
