add_executable(lab04_task1 "task1.cpp")
add_executable(lab04_task2 "task2.cpp")
add_executable(lab04_task3 "task3.cpp")
add_executable(lab04_task4 "task4.cpp")
add_executable(lab04_task5 "task5.cpp")
add_executable(lab04_task6 "task6.cpp")
add_executable(lab04_task7 "task7.cpp")
add_executable(lab04_task8 "task8.cpp")
